[workspace]

members = [
  "bitcoin-test-utils",
  "bitcoin-rpc-provider",
  "p2pd-oracle-client",
  "dlc",
  "dlc-messages",
  "dlc-trie",
  "dlc-manager",
  "mocks",
  "sample",
  "simple-wallet",
  "dlc-sled-storage-provider",
  "electrs-blockchain-provider",
]

[patch.crates-io]
lightning = { git = "https://github.com/get10101/rust-lightning/", rev = "a663e1fb3415e0b7060e3b7f76f25d96a182006e" }
lightning-net-tokio = { git = "https://github.com/get10101/rust-lightning/", rev = "a663e1fb3415e0b7060e3b7f76f25d96a182006e" }
lightning-persister = { git = "https://github.com/get10101/rust-lightning/", rev = "a663e1fb3415e0b7060e3b7f76f25d96a182006e" }
