[workspace]

members = [
  "bitcoin-test-utils",
  "bitcoin-rpc-provider",
  "p2pd-oracle-client",
  "dlc",
  "dlc-messages",
  "dlc-trie",
  "dlc-manager",
  "mocks",
  "sample",
  "simple-wallet",
  "dlc-sled-storage-provider",
  "electrs-blockchain-provider",
]

[patch.crates-io]
lightning = { path = "../../rust-lightning/lightning" }
lightning-net-tokio = {path = "../../rust-lightning/lightning-net-tokio" }
lightning-persister = { path = "../../rust-lightning/lightning-persister" }
